fixed spacing and added drop down menu

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-background-image: url("images/track.png");
+    background-image: url("images/track.png");
 }
- p {
+p {
     font-size:100px;
     margin-top:-20px;
-    }
-    #popup {
+}
+#popup {
     width: 500px;
     height: 600px;
     background: #ede1d1;
@@ -13,24 +13,24 @@ background-image: url("images/track.png");
     margin:auto;
     font-size:50px;
     text-align:center;
-    }
+}
 
-    label {
-    font-size:30px;
-    }
+label {
+    font-size:15px;
+}
 .horse {
-  position: absolute;
-  left: 0;
-  transform: scaleX(-1) scale(0.6);
+    position: absolute;
+    left: 0;
+    transform: scaleX(-1) scale(0.6);
 }
 #winnerText {
-  position: fixed;
-  top: 30%;
-  width: 100%;
-  text-align: center;
-  font-size: 80px;
-  color: gold;
-  text-shadow: 2px 2px 10px black;
+    position: fixed;
+    top: 30%;
+    width: 100%;
+    text-align: center;
+    font-size: 80px;
+    color: gold;
+    text-shadow: 2px 2px 10px black;
 }
 
 #horse01 { top: 170px; }
@@ -40,30 +40,28 @@ background-image: url("images/track.png");
 #horse05 { top: 670px; }
 
 
-
-
 #menuOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
-  background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.6);
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.2s;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.2s;
 }
 
 #menuOverlay.active {
-  opacity: 1;
-  pointer-events: all;
-
+    opacity: 1;
+    pointer-events: all;
+}
 .menuBox {
     background: white;
     padding: 20px;
